Update requirements for FastAPI project

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi
-uvicorn
-sqlalchemy
-pydantic
-scikit-learn
+uvicorn[standard]
 pandas
-python-multipart
+scikit-learn
+requests
+sqlalchemy
+
